<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".init.RegisterPanel">


    <RelativeLayout
        android:layout_width="295dp"
        android:layout_height="306dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:background="@drawable/inner_background">

        <EditText
            android:id="@+id/login_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#42ffffff" />

        <EditText
            android:id="@+id/password_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="87dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#42ffffff" />

        <EditText
            android:id="@+id/password_repeat_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="105dp"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#42ffffff" />

        <Button
            android:id="@+id/register_button"
            android:onClick="register"
            android:layout_width="234dp"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/register_button" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="153dp"
        android:layout_height="153dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/logo" />


</RelativeLayout>