<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".user.UserInformationPanel">

    <ImageButton
        android:id="@+id/user_info"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_border"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/user_info_icon" />

    <RelativeLayout
        android:layout_width="295dp"
        android:layout_height="337dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:background="@drawable/inner_background">

        <EditText
            android:id="@+id/firstname"
            android:textColor="#FFFFFF"
            android:textColorHint="#42ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29dp"
            android:ems="10"
            android:hint="Enter your firstname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/lastname"
            android:textColor="#FFFFFF"
            android:textColorHint="#42ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstname"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="Enter your lastname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="118dp"
            android:ems="10"
            android:hint="Date of birth"
            android:inputType="date"
            android:textColor="#FFFFFF"
            android:textColorHint="#42ffffff" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="28dp"
            android:text="Save" />

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="115dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

        </RadioGroup>



    </RelativeLayout>

</RelativeLayout>